--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,3 @@
-@import url(../config/_variables.scss);
-
 .App {
   width: 100vw;
   height: 100vw;
@@ -8,7 +6,10 @@
     background-color: #d5d1d1;
     width: $container-width;
     height: $container-height;
-    margin: auto auto;
-    transform: translateY(-30px);
+    margin: 100px auto 0px auto;
+    .content {
+      width: $container-width;
+      height: $container-height - $tabs-height;
+    }
   }
 }
