--- a/src/styles/Tab.scss
+++ b/src/styles/Tab.scss
@@ -1,3 +1,6 @@
+$gradient-color: linear-gradient(-60deg, #192059 0%, #18464d 100%);
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap');
+
 @keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -19,26 +22,33 @@
     transform: translate3d(0, 30%, 0);
   }
 }
+
 .true {
   animation: fadeInDown 1s;
   width: $container-width;
   height: $tabs-height;
   display: flex;
   border-radius: 10px;
+  background-image: $gradient-color;
   .tab {
+    color: #fff;
+    background-color: transparent;
     display: flex;
     flex-direction: column;
     width: $container-width / 3;
     text-align: center;
     align-items: center;
     justify-content: center;
+    font-family: 'IBM Plex Sans KR', sans-serif !important;
+    font-weight: 800;
     border: none;
     img {
       margin-bottom: 7px;
     }
     &:hover {
-      background-color: rgb(20, 28, 86);
       color: #fff;
+      background-color: rgba($color: #ffffff, $alpha: 0.1);
+      cursor: pointer;
     }
   }
   .tab-0 {
@@ -46,9 +56,17 @@
     img {
       margin: 4px 0 6px 0;
     }
+    &:hover {
+      border-top-left-radius: 10px;
+    }
+  }
+  .tab-1 {
   }
   .tab-2 {
     border-bottom-right-radius: 10px;
+    &:hover {
+      border-top-right-radius: 10px;
+    }
   }
 }
 
@@ -59,17 +77,26 @@
   height: $tabs-height;
   display: flex;
   border-radius: 10px;
-  background-color: transparent;
+  background-image: $gradient-color;
   .tab {
+    color: #fff;
+    background-color: transparent;
     display: flex;
     flex-direction: column;
     width: $container-width / 3;
     text-align: center;
     align-items: center;
     justify-content: center;
+    font-family: 'IBM Plex Sans KR', sans-serif !important;
+    font-weight: 800;
     border: none;
     img {
       margin-bottom: 7px;
+    }
+    &:hover {
+      color: #fff;
+      background-color: rgba($color: #ffffff, $alpha: 0.1);
+      cursor: pointer;
     }
   }
   .tab-0 {
