--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,19 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700');
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap');
+
 .App {
+  font-family: 'IBM Plex Sans KR', sans-serif !important;
+  background-color: #cecdcd;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   display: flex;
   .container {
     position: relative;
     border-radius: 10px;
-    background-color: #caedee;
+    background-color: #fff;
     width: $container-width;
     height: $container-height;
     margin: 100px auto 0px auto;
     .content {
       width: $container-width;
-      height: $container-height - $tabs-height - 45px;
+      height: auto;
     }
     .tab-container {
+      width: $container-width;
       position: fixed;
       bottom: 163px;
       border-bottom-right-radius: 10px;
