--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -10,14 +10,17 @@
   position: relative;
 
   .img-container {
-    width: 20px;
-    height: 20px;
+    width: 35px;
+    height: 25px;
     position: absolute;
-    top: 5px;
-    right: 10px;
+    top: 2px;
+    right: 0;
+    background-color: transparent;
+    border: none;
     img {
       width: 100%;
       height: 100%;
+      cursor: pointer;
     }
   }
   .card-text {
@@ -75,7 +78,7 @@
       .all {
         font-size: 12px;
         margin: 7px 0 0 13px;
-        line-height: 15px;
+        line-height: 16px;
         color: rgb(69, 69, 69);
         span {
           font-weight: 700;
@@ -98,7 +101,7 @@
       }
       .dataTime {
         font-size: 11px;
-        margin: 6px 0 0 12px;
+        margin: 4px 0 0 12px;
         color: #000;
       }
     }
