:hammer: fix: if localdata === none

--- a/src/styles/MyLocation.scss
+++ b/src/styles/MyLocation.scss
@@ -33,3 +33,10 @@
     overflow: scroll;
   }
 }
+
+.frist {
+  text-align: center;
+  margin-top: 200px;
+  font-size: 24px;
+  font-weight: 500;
+}
