:hammer: fix: fullmap display

--- a/src/styles/FullMap.scss
+++ b/src/styles/FullMap.scss
@@ -23,17 +23,7 @@
       }
     }
   }
-  .cards-none {
-    margin-top: 50px;
-    height: 430px;
-    overflow: scroll;
-  }
-  .cards-false {
-    margin-top: 50px;
-    height: 430px;
-    overflow: scroll;
-  }
-  .cards-true {
+  .cards {
     margin-top: 50px;
     height: 430px;
     overflow: scroll;
