--- a/src/styles/Tab.scss
+++ b/src/styles/Tab.scss
@@ -1,6 +1,28 @@
 $gradient-color: linear-gradient(-60deg, #192059 0%, #18464d 100%);
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap');
 
+@mixin tab() {
+  color: #fff;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  width: $container-width / 3;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-family: 'IBM Plex Sans KR', sans-serif !important;
+  font-weight: 800;
+  border: none;
+  img {
+    margin-bottom: 7px;
+  }
+  &:hover {
+    color: #fff;
+    background-color: rgba($color: #ffffff, $alpha: 0.1);
+    cursor: pointer;
+  }
+}
+
 @keyframes fadeInDown {
   0% {
     opacity: 1;
@@ -32,34 +54,7 @@ $gradient-color: linear-gradient(-60deg, #192059 0%, #18464d 100%);
   background-image: $gradient-color;
 
   .tab {
-    color: #fff;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    width: $container-width / 3;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-family: 'IBM Plex Sans KR', sans-serif !important;
-    font-weight: 800;
-    border: none;
-    img {
-      margin-bottom: 7px;
-    }
-    &:hover {
-      color: #fff;
-      background-color: rgba($color: #ffffff, $alpha: 0.1);
-      cursor: pointer;
-    }
-  }
-  .tab-0 {
-    border-bottom-left-radius: 10px;
-    img {
-      margin: 4px 0 6px 0;
-    }
-    &:hover {
-      border-top-left-radius: 10px;
-    }
+    @include tab();
   }
   .tab-1 {
   }
@@ -81,25 +76,7 @@ $gradient-color: linear-gradient(-60deg, #192059 0%, #18464d 100%);
   transform: translate3d(0, 94%, 0);
   background-image: $gradient-color;
   .tab {
-    color: #fff;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    width: $container-width / 3;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-family: 'IBM Plex Sans KR', sans-serif !important;
-    font-weight: 800;
-    border: none;
-    img {
-      margin-bottom: 7px;
-    }
-    &:hover {
-      color: #fff;
-      background-color: rgba($color: #ffffff, $alpha: 0.1);
-      cursor: pointer;
-    }
+    @include tab();
   }
   .tab-0 {
     border-bottom-left-radius: 10px;
